force-app/main/default/objects/Account/fields/Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>Animal_Name__c</fullName>
    <externalId>true</externalId>
    <label>Animal Name</label>
    <length>185</length>
    <type>Text</type>
</CustomField>