force-app/main/default/objects/Account/fields/Highest_Amount_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Highest_Amount_Opportunity_Name__c</fullName>
    <label>Highest Amount Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>