force-app/main/default/objects/Account/fields/qime__Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>qime__Primary_Email__c</fullName>
    <label>Primary Email</label>
    <type>Email</type>
</CustomField>