force-app/main/default/objects/Account/fields/qime__QB_Synctoken__c.field-meta.xml
<CustomField>
    <fullName>qime__QB_Synctoken__c</fullName>
    <label>QB Synctoken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>