force-app/main/default/objects/Account/fields/qime__Tax_Exemption_Reason__c.field-meta.xml
<CustomField>
    <fullName>qime__Tax_Exemption_Reason__c</fullName>
    <label>Tax Exemption Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>