force-app/main/default/objects/Account/fields/Target_Amount_Achieved_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Amount_Achieved_Opportunity_Name__c</fullName>
    <label>Target Amount Achieved Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>