force-app/main/default/objects/Account/recordTypes/custom.recordType-meta.xml
<RecordType>
    <fullName>custom</fullName>
    <active>true</active>
    <label>custom</label>
</RecordType>