force-app/main/default/objects/Account/recordTypes/standard.recordType-meta.xml
<RecordType>
    <fullName>standard</fullName>
    <active>true</active>
    <label>standard</label>
</RecordType>